--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ paginate: 4
 per_page: 4
 paginate_path: "/blog/page/:num/"
 
-# minify
+# minif
 # compress_html:
 #   clippings: all
 #   comments: ["<!-- ", " -->"]
