--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ urls:
     url: /about
   - text: Projects
     url: /projects
-  # - text: Gallery
-  #   url: /gallery
+  - text: Gallery
+    url: /gallery
   # - text: Shop
   #   url: /shop
   - text: Contact
